--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 /config/config-lightsail.json
 .env
 /LandCollectionProject/venv/*
-LandCollectionProject/binder/__pycache__/*
-LandCollectionProject/card/__pycache__/*
 .vscode/*
 ./venv/*
 /.github/workflows/CICD.yaml
@@ -10,3 +8,5 @@ LandCollectionProject/binder/temp/*
 /LandCollectionProject/node_modules
 /LandCollectionProject/static/*
 /LandCollectionProject/assets/CSS/colouredit.css
+__pycache__/
+*.pyc
