--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 /config/config-lightsail.json
 .env
-/LandCollectionProject/venv/*
+/app/venv/*
 .vscode/*
 ./venv/*
 /.github/workflows/CICD.yaml
-LandCollectionProject/binder/temp/*
-/LandCollectionProject/node_modules
-/LandCollectionProject/static/*
-/LandCollectionProject/assets/CSS/colouredit.css
+/app/binder/temp/*
+/app/node_modules
+/app/static/*
+/app/assets/CSS/colouredit.css
 __pycache__/
 *.pyc
