--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,24 @@
 version: '2.2'
 services:
-    django:
-        container_name: land-collection
-        image: landcollection:latest
-        env_file: .env
-        build:
-            context: LandCollectionProject
-            target: builder
-        ports: 
-          - '8000:8000'
+
+  django:
+    container_name: land-collection
+    image: landcollection:latest
+    env_file: .env
+    build:
+      dockerfile: ./Dockerfile
+      context: ./app
+      target: builder
+    ports: 
+      - '8000:8000'
+    networks:
+    - nginx_network
+    volumes:
+    - static_volume:/app/staticfiles
+
+networks:
+  nginx_network:
+    driver: bridge
+
+volumes:
+  static_volume:
