--- a/app/package.json
+++ b/app/package.json
@@ -14,13 +14,25 @@
     "sass": "^1.69.6",
     "sass-loader": "^13.3.3",
     "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
+    "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "css-loader": "^6.8.1",
     "jquery": "^3.7.1",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  }
+    "sass": "^1.69.6",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ConnorEALynch/LandCollection.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ConnorEALynch/LandCollection/issues"
+  },
+  "homepage": "https://github.com/ConnorEALynch/LandCollection#readme"
 }
